Add outlining algorithm content

--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
 </head>
 <body>
   <header>Influential People</header>
+     <h1>Art</h1>
+     <h2>Artists</h2>
+     <h3>Frida Kahlo</h3>
+     <h3>Jean-Michel Basquiat</h3>
+     <h3>Salvador Dali</h3>
+     <h1>Design</h1>
+     <h2>Designers</h2>
+     <h3>David Carson</h3>
+     <h3>Neville Brody</h3>
+     <h3>Susan Kare</h3>
+     <h1>Engineering</h1>
+     <h2>Engineers</h2>
+     <h3>Håkon Wium Lie</h3>
+     <h3>Linus Torvalds</h3>
+     <h3>Tim Berners-Lee</h3>
+     <h1>Typography</h1>
+     <h2>Typographers</h2>
+     <h3>Jan Tschichold</h3>
+     <h3>Matthew Carter</h3>
 </body>
 </html>
