Change outlining algorithm content

--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
    <title>Influential People</title>
 </head>
 <body>
-  <header>Influential People</header>
-     <h1>Art</h1>
-     <h2>Artists</h2>
-     <h3>Frida Kahlo</h3>
-     <h3>Jean-Michel Basquiat</h3>
-     <h3>Salvador Dali</h3>
-     <h1>Design</h1>
-     <h2>Designers</h2>
-     <h3>David Carson</h3>
-     <h3>Neville Brody</h3>
-     <h3>Susan Kare</h3>
-     <h1>Engineering</h1>
-     <h2>Engineers</h2>
-     <h3>Håkon Wium Lie</h3>
-     <h3>Linus Torvalds</h3>
-     <h3>Tim Berners-Lee</h3>
-     <h1>Typography</h1>
-     <h2>Typographers</h2>
-     <h3>Jan Tschichold</h3>
-     <h3>Matthew Carter</h3>
+  <header><h1>Influential People</h1></header>
+  <main>
+   <h2>Art</h2>
+   <h3>Artists</h3>
+   <h4>Frida Kahlo</h4>
+   <h4>Jean-Michel Basquiat</h4>
+   <h4>Salvador Dali</h4>
+   <h2>Design</h2>
+   <h3>Designers</h3>
+   <h4>David Carson</h4>
+   <h4>Neville Brody</h4>
+   <h4>Susan Kare</h4>
+   <h2>Engineering</h2>
+   <h3>Engineers</h3>
+   <h4>Håkon Wium Lie</h4>
+   <h4>Linus Torvalds</h4>
+   <h4>Tim Berners-Lee</h4>
+   <h2>Typography</h2>
+   <h3>Typographers</h3>
+   <h4>Jan Tschichold</h4>
+   <h4>Matthew Carter</h4></main>
 </body>
 </html>
