Add block quotes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
    <h2>Art</h2>
    <h3>Artists</h3>
    <h4>Frida Kahlo</h4>
+   <blockquote cite="https://www.goalcast.com/2017/11/28/17-frida-kahlo-quotes">
+     Take a lover who looks at you like maybe you are a bourbon biscuit.</blockquote>
    <h4>Jean-Michel Basquiat</h4>
+   <blockquote cite="https://www.anothermag.com/art-photography/11822/basquiat-isms-jean-michel-basquiat-best-quotes-larry-warsh-lee-jaffe">
+     I think there’s a lot of people that are neglected in art.</blockquote>
    <h4>Salvador Dali</h4>
    <h2>Design</h2>
    <h3>Designers</h3>
    <h4>David Carson</h4>
    <h4>Neville Brody</h4>
    <h4>Susan Kare</h4>
+   <blockquote cite="https://www.azquotes.com/quote/1143132">
+     People say graphic design is so different now, because you have so many more pixels and colors to work with... 
+     But when you study art history, you see there's just nothing new under the sun. Mosaics and needlework, 
+     it's all analogous to pixel and bitmap art. And with it all, good design's not about what medium you're working in, 
+     it's about thinking hard about what you want to do and what you have to work with before you start.</blockquote>
    <h2>Engineering</h2>
    <h3>Engineers</h3>
    <h4>Håkon Wium Lie</h4>
@@ -25,6 +34,8 @@
    <h2>Typography</h2>
    <h3>Typographers</h3>
    <h4>Jan Tschichold</h4>
+   <blockquote cite="https://www.azquotes.com/quote/1333608">
+     Readers want what is important to be clearly laid out; they will not read what is too troublesome.</blockquote>
    <h4>Matthew Carter</h4></main>
 </body>
 </html>
