--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <h2>Art</h2>
    <h3>Artists</h3>
    <h4>Frida Kahlo</h4>
+   <img src="https://www.moma.org/d/assets/W1siZiIsIjIwMTYvMDUvMjcvMTdzNHV2aGkxbF8yOTYzXzIwNzMwOF9rYWhsb19jcm9wLmpwZyJdLFsicCIsImNvbnZlcnQiLCItcmVzaXplIDUxMng1MTJcdTAwM2UiXV0/2963_207308_kahlo_crop.jpg?sha=9a130b1a6fb0f122" 
+   alt="[An image of Frida Kahlo.]"
+   width="400">
    <blockquote cite="https://www.goalcast.com/2017/11/28/17-frida-kahlo-quotes">
      Take a lover who looks at you like maybe you are a bourbon biscuit.</blockquote>
    <h4>Jean-Michel Basquiat</h4>
