--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
    <blockquote cite="https://www.goalcast.com/2017/11/28/17-frida-kahlo-quotes">
      Take a lover who looks at you like maybe you are a bourbon biscuit.</blockquote>
    <h4>Jean-Michel Basquiat</h4>
+   <img src="https://sothebys-com.brightspotcdn.com/dims4/default/6fcfa82/2147483647/strip/true/crop/3733x4724+0+0/resize/684x866!/quality/90/?url=http%3A%2F%2Fsothebys-brightspot.s3.amazonaws.com%2Fdotcom%2F8c%2F3a%2F461e0a3b4c0aa418ec4ff9c1739a%2Fgettyimages-500931899-master.jpg"
+   alt="[An image of Jean-Michel Basquiat.]"
+   width="400">
    <blockquote cite="https://www.anothermag.com/art-photography/11822/basquiat-isms-jean-michel-basquiat-best-quotes-larry-warsh-lee-jaffe">
      I think there’s a lot of people that are neglected in art.</blockquote>
    <h4>Salvador Dali</h4>
