--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
    <h4>David Carson</h4>
    <h4>Neville Brody</h4>
    <h4>Susan Kare</h4>
+   <img src="https://www.mtholyoke.edu/sites/default/files/styles/175_women_gallery_feature/public/175/images/profile_susan_kare.jpg?itok=gOB8oAyZ"
+   alt="[An image of Susan Kare.]"
+   width="400">
    <blockquote cite="https://www.azquotes.com/quote/1143132">
      People say graphic design is so different now, because you have so many more pixels and colors to work with... 
      But when you study art history, you see there's just nothing new under the sun. Mosaics and needlework, 
