--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
    <h2>Typography</h2>
    <h3>Typographers</h3>
    <h4>Jan Tschichold</h4>
+   <img src="https://lh3.googleusercontent.com/proxy/RYUlY2A_7zbtqNoYlyrseoBxKtePZ-UBUag3XqUgGZcmLTqsazX1jTFG1qk_aXj7IZgm1kuSZb5Hra4xwEqyV0oED_3zpCSwApyXsAR3lGUQ2nTCwinYfx0"
+   alt="[An image of Jan Tschichold.]"
+   width="400">
    <blockquote cite="https://www.azquotes.com/quote/1333608">
      Readers want what is important to be clearly laid out; they will not read what is too troublesome.</blockquote>
    <h4>Matthew Carter</h4></main>
